--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/navigation-bar_wrapper.css">
 </head>
 <body style="background-color: #fafafa; height: 500vh; max-height: 500vh;">
 
