--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
 
     <footer class="footer">
         <div class="footer-container">
+            <div class="footer-top">
+                <div class="footer-community">
+                    <img src="img/Picsart_22-10-19_00-20-53-102.png" alt="Our Team" class="footer-community_img" style="height: 145px; width: 220px;">
+
+                    <span class="footer-community_text">Become part of a community</span>
+                </div>
+            </div>
+            <hr>
         </div>
     </footer>
    
