--- a/index.html
+++ b/index.html
@@ -87,10 +87,96 @@
                 <div class="footer-community">
                     <img src="img/Picsart_22-10-19_00-20-53-102.png" alt="Our Team" class="footer-community_img" style="height: 145px; width: 220px;">
 
-                    <span class="footer-community_text">Become part of a community</span>
+                    <span class="footer-community_text">Become part of our community</span>
+
+                    <div class="footer-social">
+                        <a href="https://www.instagram.com/ivan.yef/" class="instagram">
+                            <img src="img/87390.png" alt="ivan.yef" style="height: 28px; width: 28px;">
+                        </a>
+
+                        <a href="#" class="telegram">
+                            <img src="img/telgrampng.parspng.com-2.png" style="height: 30px; width: 30px;">
+                        </a>
+
+                        <a href="#" class="youtube">
+                            <img src="img/48968.png" style="height: 32px; width: 32px;">
+                        </a>
+                    </div>
+                </div>
+                <div class="footer_links" style="width: 939px;">
+                    <div class="footer-links_item">
+                        <span><h4>Social Media</h4></span>
+
+                        <div class="links-item_body">
+                            <div class=""></div>
+                            <ul>
+                                <li>
+                                    <a href="https://www.instagram.com/ivan.yef/">Instagram</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">Telegram</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">YouTube</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    
+                    <div class="footer-links_item">
+                        <span><h4>Service</h4></span>
+
+                        <div class="links-item_body">
+                            <ul>
+                                <li>
+                                    <a href="#">FAQ</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">Have a question?</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">...</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">...</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="footer-links_item">
+                        <span><h4 id="krh-manga">krh Manga</h4></span>
+
+                        <div class="links-item_body">
+                            <ul>
+                                <li>
+                                    <a href="#">...</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">...</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">...</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
             <hr>
+        </div>
+        
+        <div class="footer-bottom">
+            <span class="span-copyright">2020 Copyright...</span>
+
+            <span><a href="#">Privacy</a></span>
         </div>
     </footer>
    
