separated some files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/navigation-bar_wrapper.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/hero-slider.css">
+    <link rel="stylesheet" href="css/genres-carousel.css">
 </head>
 <body style="background-color: #fafafa; height: 4645px; max-height: 500vh;">
 
@@ -59,7 +60,6 @@
 
                 <a href="#"><span class="more-info_button">More Info</span></a>
             </div>
-
         </div>
 
         <div class="gradient-shadow-hero-slider">
@@ -76,9 +76,9 @@
             </button>
         </div>
 
-    </div>
+        <div class="genres-carousel" style="background-color: #111; height: 156px;">
+        </div>
 
-    <div class="genres-carousel" style="background-color: #111; height: 156px;">
     </div>
 
     <footer class="footer">
